# OpenCV-Applications

./: .gitignore  CMakeLists.txt  README.md
Cloud Deployment/: streamlit_sample.py
Cloud Deployment/Digit Recognizer App/: cv_web_app.py
Cloud Deployment/Streamlit Test/: streamlit_sample.py
Face Landmark Applications/: CMakeLists.txt  alpha_blending.cpp  delaunay.cpp  delaunay.h  env_util.cpp  env_util.h  face_apps.cpp  face_apps.h  face_averaging.cpp  face_averaging.h  main.cpp  smile_detection.cpp  smile_detection.h  traingle_warp.cpp  triangle_warp.h
Face Landmark Detection/: CMakeLists.txt  custom_detector.cpp  custom_detector.h  env_util.cpp  env_util.h  face_alignment.cpp  face_alignment.h  face_detect_dlib.cpp  face_detect_dlib_.h  main.cpp
Face Landmark Detection/Python Support/: custom_detector.py  train_test_xml.py  visual_annotator.py
Face Recognition/: CMakeLists.txt  doppelganger.cpp  doppelganger.h  doppleganger.cpp  doppleganger.h  face_rec.cpp  face_rec.h  face_rec_dl.cpp  face_rec_dl.h  labelData.h  main.cpp
Neural Networks/: CMakeLists.txt  conv.cpp  conv.h  image_classification.cpp  image_classification.h  lbitorch_sample.cpp  libtorch_sample.h  main.cpp  matplotlib_display.py
OCR/: CMakeLists.txt  main.cpp  ocr_main.cpp  ocr_main.h
Object Detection/: CMakeLists.txt  single_shot.cpp  single_shot.h  yolo.cpp  yolo.h
Pretrained models/: CMakeLists.txt  caffe_main.cpp  caffe_main.h  pytorch_to_torchscript.py  pytorch_to_torchscript2.py  torchscript_to_libtorch.cpp  torchscript_to_libtorch2.cpp
Project Test/: CMakeLists.txt  project.cpp
Snapchat Filters/: CMakeLists.txt  face_swapping.cpp  face_swapping.h  ify_filters.cpp  ify_filters.h  main.cpp  virtual_makeup.cpp  virtual_makeup.h
Utility/: CMakeLists.txt  CSVReader.h  env_util.cpp  env_util.h  ml_util.cpp  ml_util.h  str_split.h  utils.cpp  utils.h
