cmake_minimum_required (VERSION 3.8)
project(VisionApplications LANGUAGES CXX)

if (${CMAKE_BUILD_TYPE} STREQUAL "Release")
	set(OpenCV_DIR $ENV{LIBS_PATH}/opencv-master/build)
elseif(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
	set(OpenCV_DIR $ENV{LIBS_PATH}/opencv-master/build)
endif()

add_subdirectory("Utility")
add_subdirectory("Face Landmark Detection")
add_subdirectory("Face Landmark Applications")
add_subdirectory("Snapchat Filters")
add_subdirectory("Face Recognition")
add_subdirectory("OCR")
add_subdirectory("Project Test")
add_subdirectory("Neural Networks")